@@ -1,23 +1,39 @@
 package controllers.gestionsuivi;
 
 
+import atlantafx.base.controls.ToggleSwitch;
+import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import javafx.animation.*;
 import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
+import javafx.geometry.HorizontalDirection;
+import javafx.geometry.Pos;
+import javafx.scene.Node;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
+import javafx.scene.image.ImageView;
 import javafx.scene.layout.VBox;
+import javafx.scene.text.Text;
+import javafx.scene.text.TextFlow;
+import javafx.util.Duration;
 import org.json.JSONArray;
+import org.json.JSONObject;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.ResourceBundle;
 import java.util.Scanner;
 
@@ -34,7 +50,7 @@ public class CaloriesGeneratorController implements Initializable {
     public CaloriesGeneratorController() throws UnsupportedEncodingException {
     }
 
-
+    private  static  int testVariable ;
 
 
     @FXML
@@ -42,62 +58,68 @@ public class CaloriesGeneratorController implements Initializable {
 
     @FXML
     private VBox ReciepeVbox;
+
+
     @FXML
-    void ReciepePromptingButton(ActionEvent event) throws IOException {
+    private Label LabelRecipe;
 
-        String apiKey = "tuTgdx5oCYa7c3JlJ7+MeA==5DQ2xVNKpJ7uVtAY"; // Replace with your actual API key
+    @FXML
+    private ImageView image1;
+
+    @FXML
+    private ImageView image2;
+    @FXML
+    void ReciepePromptingButton(ActionEvent event) throws IOException, InterruptedException {
         String query = ReciepeField.getText();
-        String encodedQuery = URLEncoder.encode(query, "UTF-8");
 
 
-        String urlString = "https://api.api-ninjas.com/v1/recipe?query" + encodedQuery;
-        URL url = new URL(urlString);
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("https://food-recipes-with-images.p.rapidapi.com/?q=" + query))
+                .header("X-RapidAPI-Key", "18ae9b5d60msh7e6247128682805p139e5djsna435480ded7c")
+                .header("X-RapidAPI-Host", "food-recipes-with-images.p.rapidapi.com")
+                .method("GET", HttpRequest.BodyPublishers.noBody())
+                .build();
+        image1.setVisible(false);
 
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestProperty("X-Api-Key", apiKey);
-        connection.setRequestProperty("accept", "application/json");
         try {
-            InputStream responseStream = connection.getInputStream();
-            ObjectMapper mapper = new ObjectMapper();
-            JsonNode root = mapper.readTree(responseStream);
-            System.out.println(root.path("fact").asText());
-            System.out.println(root);
+            HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+            System.out.println(response.body());
+            String responseBody = response.body();
+            ObjectMapper objectMapper = new ObjectMapper();
+            JsonNode jsonNode = objectMapper.readTree(responseBody);
+            JsonNode dataArray = jsonNode.get("d");
             ReciepeVbox.getChildren().clear();
+            for (JsonNode item : dataArray) {
+                String Title = item.get("Title").asText();
+                JsonNode Ingredients = item.get("Ingredients");
+                String Instructions = item.get("Instructions").asText();
+                String Image = item.get("Image").asText();
 
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/gestionSuivi/recette.fxml"));
+                Node node = loader.load();
+                RecetteController recetteController = loader.getController();
+                recetteController.fiellFields(Title, Ingredients, Instructions, Image);
+                ReciepeVbox.getChildren().add(node);
 
-            for(JsonNode item : root) {
-
-                String title = item.get("title").asText();
-                String ingredients = item.get("ingredients").asText();
-                String servings = item.get("servings").asText();
-                String instructions = item.get("instructions").asText();
-
-                String labelText = "Title: " + title + "\n" +
-                        "Ingredients: " + ingredients + "\n" +
-                        "Servings: " + servings + "\n" +
-                        "Instructions: " + instructions;
-
-                Label label = new Label(labelText);
-                label.getStyleClass().add("label-style");
-
-                ReciepeVbox.getChildren().add(label);
             }
-        } catch (IOException e) {
-            e.printStackTrace();
-            Throwable cause = e.getCause();
-            if (cause != null) {
-                System.out.println("Root cause: " + cause.toString());
-            }
-
+        } catch (Exception e) {
+            System.out.println("Error: " + e.getMessage());
 
         }
 
     }
 
 
+
+
+
+
+
+
+
     @FXML
     void generateCalories(ActionEvent event) throws IOException {
-        String apiKey = "tuTgdx5oCYa7c3JlJ7+MeA==5DQ2xVNKpJ7uVtAY"; // Replace with your actual API key
+        String apiKey = "tuTgdx5oCYa7c3JlJ7+MeA==5DQ2xVNKpJ7uVtAY";
         String query = CaloriesField.getText();
         String encodedQuery = URLEncoder.encode(query, "UTF-8");
 
@@ -106,7 +128,7 @@ public class CaloriesGeneratorController implements Initializable {
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestProperty("X-Api-Key", apiKey);
         connection.setRequestProperty("accept", "application/json");
-
+        image2.setVisible(false);
         try {
             InputStream responseStream = connection.getInputStream();
 
@@ -132,25 +154,14 @@ public class CaloriesGeneratorController implements Initializable {
                 double potassium_mg = item.get("potassium_mg").asDouble();
                 double cholesterol_mg = item.get("cholesterol_mg").asDouble();
                 double carbohydrates_total_g = item.get("carbohydrates_total_g").asDouble();
+                double fiber = item.get("fiber_g").asDouble();
                 double sugar_g = item.get("sugar_g").asDouble();
 
-
-                String labelText = "Name: " + name + "\n" +
-                        "Calories: " + calories + "\n" +
-                        "Serving Size: " + serving_size_g + "g\n" +
-                        "Fat Total: " + fat_total_g + "g\n" +
-                        "Fat Saturated: " + fat_saturated_g + "g\n" +
-                        "Protein: " + protein_g + "g\n" +
-                        "Sodium: " + sodium_mg + "mg\n" +
-                        "Potassium: " + potassium_mg + "mg\n" +
-                        "Cholesterol: " + cholesterol_mg + "mg\n" +
-                        "Carbs: " + carbohydrates_total_g + "g\n" +
-                        "Sugar: " + sugar_g + "g";
-
-                Label label = new Label(labelText);
-                label.getStyleClass().add("label-style");
-
-                VboxCaloriesPrompted.getChildren().add(label);
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/gestionSuivi/MacrosChat.fxml"));
+                Node node = loader.load();
+                MacrosController macrosController = loader.getController();
+                macrosController.fillMacros(name,calories,serving_size_g,fat_total_g,fat_saturated_g,protein_g,sodium_mg,potassium_mg,cholesterol_mg,carbohydrates_total_g,fiber,sugar_g);
+                VboxCaloriesPrompted.getChildren().add(node);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -160,14 +171,56 @@ public class CaloriesGeneratorController implements Initializable {
             }
         }
 
+    }
 
 
 
+    @FXML
+    private VBox translateVbox;
+    public String translationApi(String query) throws IOException, InterruptedException {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("https://translate281.p.rapidapi.com/"))
+                .header("content-type", "application/x-www-form-urlencoded")
+                .header("X-RapidAPI-Key", "18ae9b5d60msh7e6247128682805p139e5djsna435480ded7c")
+                .header("X-RapidAPI-Host", "translate281.p.rapidapi.com")
+                .method("POST", HttpRequest.BodyPublishers.ofString("text=" + query + "&from=auto&to=fr"))
+                .build();
+        HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+        // Extract the translated response from the JSON data
+        String jsonResponse = response.body();
+        ObjectMapper objectMapper = new ObjectMapper();
+        JsonNode jsonNode = objectMapper.readTree(jsonResponse);
+        String translatedResponse = jsonNode.get("response").asText();
+        return translatedResponse;
+    }
+
+
+
+
+
+    public  void translateButton(){
+            var toggle2 = new ToggleSwitch("French");
+        toggle2.selectedProperty().addListener((obs, old, val) -> {
+            toggle2.setText(val ? "en cours" : "French");
+            if (val) {
+                testVariable = 1;
+            }
+            else{
+            System.out.println("Toggle switch is NOT selected");
+
+        }
+            });
+
+        toggle2.setLabelPosition(HorizontalDirection.RIGHT);
+        toggle2.setSelected(false);
+
+        translateVbox.getChildren().add(toggle2);
     }
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-
+        translateVbox.getChildren().clear();
+translateButton();
 
 
     }
